--- a/src/app/components/quizz/quizz.component.html
+++ b/src/app/components/quizz/quizz.component.html
@@ -1,3 +1,18 @@
 <div class="quizz-container">
-    
+    <div class="quizz-logo">
+        <img src="/src/assets/imgs/logo.png" alt="logo!">
+        <h3>Titulo</h3>
+    </div>
+    <div class="quizz-questions">
+        <h3>Questao selecionada</h3>
+    </div>
+    <div class="quizz-options">
+        <button class="btn-option">
+            optionname
+        </button>
+    </div>
+    <div class="quizz-results">
+        <h1>O seu resultado e: </h1>
+        <p>Resposta selecionada</p>
+    </div>
 </div>
