intelligence applied in the project

--- a/src/app/components/quizz/quizz.component.css
+++ b/src/app/components/quizz/quizz.component.css
@@ -2,7 +2,6 @@
     width: 80%;
     margin: auto;
     margin-top: 20px;
-    border: 1px solid red;
 }
 
 .quizz-logo {
@@ -59,6 +58,7 @@
 }
 
 .btn-option:active {
+    background-color: #346b18;
     position: relative;
     top: 1px;
 }
