--- a/src/app/components/quizz/quizz.component.html
+++ b/src/app/components/quizz/quizz.component.html
@@ -1,18 +1,20 @@
 <div class="quizz-container">
     <div class="quizz-logo">
-        <img src="/src/assets/imgs/logo.png" alt="logo!">
-        <h3>Titulo</h3>
+        <img src="/src/assets/imgs/logo.png" alt=".">
+        <h3>{{title}}</h3>
     </div>
-    <div class="quizz-questions">
-        <h3>Questao selecionada</h3>
+    <div *ngIf="!finished" class="quizz-questions">
+        <h3>{{questionSelected.question}}</h3>
     </div>
-    <div class="quizz-options">
-        <button class="btn-option">
-            optionname
+    <div *ngIf="!finished" class="quizz-options">
+        <button *ngFor="let option of questionSelected.options; let i = index;"
+        (click)="playerChoose(option.alias)"
+        class="btn-option">
+            {{option.name}}
         </button>
     </div>
-    <div class="quizz-results">
-        <h1>O seu resultado e: </h1>
-        <p>Resposta selecionada</p>
+    <div *ngIf="finished" class="quizz-results">
+        <h1>O seu resultado é: </h1>
+        <p>{{answerSelected}}</p>
     </div>
 </div>
